k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog-frontend
  labels:
    name: blog-frontend
    app: blog
